--- a/index.html
+++ b/index.html
@@ -97,6 +97,57 @@
                 </div>
             </div>
         </section>
+
+        <section class="edu">
+            <h3 class="edu-summary-title">A summary of My Resume</h3>
+            <div class="edu-exp">
+                <div class="edu-container">
+                    <h3 class="edu-title">My Education</h3>
+
+                    <div class="edu-card">
+                        <h4>Master in Computer Engineering</h4>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                    </div>
+                    <div class="edu-card">
+                        <h4>Master in Computer Engineering</h4>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                    </div>
+                    <div class="edu-card">
+                        <h4>Master in Computer Engineering</h4>
+                        <h3>Harvard University / 2015 - 2017</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        
+                    </div>
+                </div>
+
+                <div class="exp-container">
+                    <h3 class="edu-title">My Experience</h3>
+
+                    <div class="edu-card">
+                        <h4>Sr. Font End Developer</h4>
+                        <h3>Apple Inc / 2020 - Current</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                    </div>
+                    <div class="edu-card">
+                        <h4>Jr. Font End Developer</h4>
+                        <h3>Dribbble Inc / 2018 - 2022</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <hr>
+                    </div>
+                    <div class="edu-card">
+                        <h4>HTML Developer</h4>
+                        <h3>Adobe Inc / 2017 - 2018</h3>
+                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
