--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
+
+
         </section>
 
         <section class="edu">
@@ -147,7 +149,43 @@
                     </div>
                 </div>
             </div>
+
+            <div class="cv-butt">
+                <button class="button">Download CV</button>
+            </div>
+            
         </section>
+
+
+
     </main>
+
+    <footer>
+        <section class="foot-container">
+            <div class="connect">
+                <h3 class="footer-title">Let's Connect</h3>
+                <p>
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+                </p>
+                <div class="connect-img">
+                    <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                </div>
+            </div>
+            <div class="message">
+                <h3 class="footer-title">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <br>
+                    <input type="text" name="" id="" placeholder="Your email">
+                    <br>
+                    <textarea name="" id="" placeholder="Message"></textarea>
+                    <br>
+                    <input class="button" type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
